fix quotations not showing up
ability to add more sites for linkedData

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -47,3 +47,7 @@ ul {
 a {
   color: #0023E8;
 }
+
+h4 {
+  margin: .5em 0;
+}
